kubernetes-plumber-example/example-api.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: example-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: example-api
    spec:
      containers:
      - name: example-api
        image: example-api
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
