kubernetes-plumber-example/example-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-api
  labels:
    app: example-api
spec:
  type: NodePort
  selector:
    app: example-api
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    name: http
