kubernetes-plumber-example/example-api.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-api
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /api/
        backend:
          serviceName: example-api
          servicePort: 8000
